--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ yandex_site_verification :
 naver_site_verification  :
 
 # Social Sharing
-twitter:https://twitter.com/KenjiHilasak
+twitter:
   username               :KenjiHilasak
 facebook:https://www.facebook.com/Luis.Kenj
   username               :Luis.Kenj
