--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,8 @@ naver_site_verification  :
 # Social Sharing
 twitter:
   username               :
-facebook:https://www.facebook.com/Luis.Kenj
-  username               :Luis.Kenj
+facebook:
+  username               :
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
